adicionando as mudanças

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Ge-Formadores em ação</title>
 </head>
 <body>
-    <header>
-        <h1> Formadores em ação - Programação </h1>
+    <header class="cabecalho">
+        <img class="imagem-logo" src="logoformadores.jpeg" alt="logo do formadores em ação">
+        <h1> Ge- Formadores em ação </h1>
+        <ul class="lista">
+            <li class="itens">Trilhas</li>
+            <li class="itens">Sessão</li>
+        </ul>
 
     </header>
     
