adicionando os estilos no css

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Ge-Formadores em ação</title>
+    <title>GE- Formadores em ação</title>
 </head>
 <body>
     <header class="cabecalho">
-        <img class="imagem-logo" src="logoformadores.jpeg" alt="logo do formadores em ação">
-        <h1> Ge- Formadores em ação </h1>
-        <ul class="lista">
-            <li class="itens">Trilhas</li>
-            <li class="itens">Sessão</li>
-        </ul>
+        <img class="logo" src="logoformadores.jpeg" alt="logo do formadores em ação">
+   <h1>GE- Formadores em Ação</h1>
+<ul class="lista" >
+    <li>Trilhas</li>
+    <li>Sessões</li>
+</ul>
 
     </header>
     
