--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header class="cabecalho">
         <img class="logo" src="logoformadores.jpeg" alt="logo do formadores em ação">
-   <h1>GE- Formadores em Ação</h1>
-<ul class="lista" >
-    <li>Trilhas</li>
-    <li>Sessões</li>
+   <h1 class="titulo">GE- Formadores em Ação</h1>
+<ul class="lista">
+    <li class="item">Trilhas</li>
+    <li class="item">Sessões</li>
 </ul>
 
     </header>
