adicionando a sessao amarela

--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
     <li class="item">Trilhas</li>
     <li class="item">Sessões</li>
 </ul>
-
     </header>
+
+    <section class="amarela">
+        <h2 class="tituloamarelo"> Como funciona o GE?</h2>
+        <p class="textoamarelo">
+            O Ge é um momento de troca entre pares, onde cada um utiliza seu conhecimento e todos tem oportunidade de aprender.
+       </p>
+       <p class="textoamarelo">
+        São encontros semanais, durante um trimestre.
+       </p>
+       <img class="imagemamarelo" src="livroepc.jpg" alt="imagem de uma pessoa segurando livros e outra um computador">
+
+    </section>
     
 </body>
 </html>
