adicionando a seção estudantes e o rodapé

--- a/index.html
+++ b/index.html
@@ -4,30 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Tilt+Prism&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>GE- Formadores em ação</title>
 </head>
 <body>
     <header class="cabecalho">
         <img class="logo" src="logoformadores.jpeg" alt="logo do formadores em ação">
-   <h1 class="titulo">GE- Formadores em Ação</h1>
-<ul class="lista">
-    <li class="item">Trilhas</li>
-    <li class="item">Sessões</li>
+   <h1>GE- Formadores em Ação</h1>
+<ul class="lista" >
+    <li class="lista">Trilhas</li>
+    <li class="lista">Sessões</li>
 </ul>
     </header>
-
     <section class="amarela">
+        <div>
         <h2 class="tituloamarelo"> Como funciona o GE?</h2>
-        <p class="textoamarelo">
-            O Ge é um momento de troca entre pares, onde cada um utiliza seu conhecimento e todos tem oportunidade de aprender.
-       </p>
-       <p class="textoamarelo">
-        São encontros semanais, durante um trimestre.
-       </p>
-       <img class="imagemamarelo" src="livroepc.jpg" alt="imagem de uma pessoa segurando livros e outra um computador">
-
+        <p class="paragrafos">
+            O Ge é um momento de troca  entre pares, onde cada um utiliza seu conhecimento e 
+            todos tem oportunidade de aprender.
+        </p> <br>
+        <p class="paragrafos"> São encontros semanais durante um trimestre.</p> </br>
+        </div>
+    <img class="imagemamarelo" src="livroepc.jpg" alt="imagem de uma pessoa segurando 
+        livros e outra um computador">
     </section>
+
+    <section class="cursistas">
+        <h1> Quem são os cursistas? </h1>
+        <div class="todososcursistas">
+            <div class="individuo">
+                <img class="foto" src="pessoa1.png" alt="foto da Fulana">
+                <h3> Fulana </h3>
+            </div>
+            <div class="individuo">
+                <img class="foto" src="pessoa2.png" alt="foto do Ciclano">
+                <h3> Ciclano </h3>
+            </div>
+            <div class="individuo">
+                <img class="foto" src="pessoa4.png" alt="foto do Beltrano">
+                <h3> Beltrano </h3>
+            </div>
+            <div class="individuo">
+                <img class="foto" src="pessoa5.png" alt="foto do José">
+                <h3> José </h3>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <h1>Mais informações</h1>
+        <a href="https://classroom.google.com/c/NTkzMzcyMDE4MDUx" target="_blank" rel="noopener noreferrer"></a>
+        <img class="icone" src="iconclassroom.jpeg" alt="logo do classroom"></a>
+    </footer>
+
     
 </body>
 </html>
